Add structured data and window.theme object

--- a/src/locales/en.default.json
+++ b/src/locales/en.default.json
@@ -1,1 +1,12 @@
-{}
+{
+  "structured_data": {
+    "breadcrumbs": {
+      "cart": "Cart",
+      "collections": "Collections",
+      "page": "Page {{ page }}",
+      "products": "Products",
+      "search": "Search",
+      "tags_html": "Tagged \"{{ tags }}\""
+    }
+  }
+}
