Add seo title, description, and social meta snippet

--- a/src/locales/en.default.json
+++ b/src/locales/en.default.json
@@ -1,4 +1,13 @@
 {
+  "general": {
+    "accessibility": {
+      "skip_to_content": "Skip to content"
+    },
+    "meta": {
+      "tags": "Tagged \"{{ tags }}\"",
+      "page": "Page {{ page }}"
+    }
+  },
   "structured_data": {
     "breadcrumbs": {
       "cart": "Cart",
