Add customer account menu web component

--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -42,6 +42,7 @@
     "input_corner_radius": "Input corner radius",
     "layout_direction": "Layout direction",
     "menu": "Menu",
+    "customer_account_menu": "Customer account menu",
     "padding": "Padding",
     "page_margin": "Page margin",
     "page_width": "Page width",
